<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/featuresDisplay"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/toolbar_features"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:minWidth="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/title_features"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/button_clear_all_for_features"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="24dp"
                    android:background="#00FFFFFF"
                    app:srcCompat="@drawable/ic_delete"
                    android:contentDescription="@string/delete_all" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_features"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/toolbar_features"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#00000000"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/featuresDisplayImageButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/customborder"
                app:srcCompat="@drawable/ic_favorite"
                android:contentDescription="@string/features_image" />

            <ImageButton
                android:id="@+id/mainDisplayImageButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_create"
                android:contentDescription="@string/main_image" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>