<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainDisplay"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tb_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_cyrillic"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <ss.anoop.awesomeedittext.AwesomeEditText
                android:id="@+id/et_input_cyrillic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/customborder"
                android:hint="@string/hint_enter_text"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/text_latinic"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/button_add_toF"
                    style="@android:style/Widget.Holo.Light.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="24dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/add_features"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_favorite" />
            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/customborder">

                <TextView
                    android:id="@+id/tv_output_translate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </ScrollView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp">

                <com.sanojpunchihewa.glowbutton.GlowButton
                    android:id="@+id/button_convert"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="72dp"
                    android:layout_marginEnd="72dp"
                    android:minWidth="200dp"
                    android:padding="20dp"
                    android:text="@string/textConvert"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:buttonColor="@color/colorPrimary"
                    app:glowColor="@color/colorPrimaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:pressedGlowSize="25dp"
                    app:unpressedGlowSize="15dp" />

                <ImageButton
                    android:id="@+id/button_open_translator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="8dp"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/open_translator"
                    android:src="@drawable/ic_translate" />
            </RelativeLayout>


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/customborder">

                <TextView
                    android:id="@+id/tv_output_frequency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tb_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/featuresDisplayImageButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_favorite"
                android:contentDescription="@string/features_image" />

            <ImageButton
                android:id="@+id/mainDisplayImageButton"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/customborder"
                app:srcCompat="@drawable/ic_create"
                android:contentDescription="@string/features_image" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>